feat: changing build script architecture